# CPP_Learning_Code

./: .gitignore
chap-01/: 2-parrot.cpp  3-array.cpp  4-calculator  4-calculator.cpp
chap-02/: 1-first_class.cpp  2-constructor.cpp  3-clone  3-clone.cpp  CMakeLists.txt
chap-02/4-rectangle/: Rectangle.cpp  Rectangle.h  main.cpp
chap-02/5-polygon/: Polygon.cpp  Polygon.h  main.cpp
chap-03/: 1-vectors.cpp  2-sequentials.cpp  4-strings.cpp  5-tuples.cpp
chap-03/3-associatives/: keys.h  main.cpp
chap-04/1-hierarchy/: Boss.cpp  Boss.h  Employee.h  Intern.cpp  Intern.h  Staff.cpp  Staff.h
chap-04/2-farm/: Animal.h  Cat.h  Chicken.h  Cow.h  Dog.h  FarmHouse.cpp
chap-04/3-vehicles/: Car.h  Program.cpp  Vehicle.h
tp-02/: CMakeLists.txt
tp-02/addx/: addx.cpp
tp-02/event-reminder/: Event.h  Parsing.cpp  TimerHand  TimerHand.cpp  TimerHand.h
tp-02/histogram/: Histogram.cpp  Histogram.h  main.cpp
tp-03/: CMakeLists.txt  NumName.cpp  Point.cpp  Sieve.cpp  TP3.md
tp-03/PhoneBook/: PhoneBook.cpp  PhoneBook.h  Tests.cpp  Tests.h
tp-04/: Compte_Rendu.md
tp-04/PhoneCalls/: Main.cpp  Person.h  Phone.h
tp-04/Shapes/: circle.hpp  line.hpp  line_seg.hpp  main.cpp  rectangle.hpp  shape.hpp
