add_executable(tp2-addx

    addx/addx.cpp
)

add_executable(tp2-histogram

    histogram/Histogram.cpp
    histogram/Histogram.h
    histogram/main.cpp
)

add_executable(tp2-reminders
    
    event-reminder/Reminders.cpp
    event-reminder/Event.h
    event-reminder/Parsing.cpp
    event-reminder/Parsing.h   
)